# Gadius-CLI

./: .env.global.example  .gitignore  .gitmodules  .prettierrc  README.md  nx.json  package-lock.json  package.json  tsconfig.base.json  turbo.json
.github/workflows/: full-test.yml  ping_discord.yml  progress.yml
apps/cli/: .env  .eslintrc.js  .gitignore  .prettierignore  Dockerfile  README.md  config-contracts.ts  deployedAddress.config.ts  nx.json  package-lock.json  package.json  tsconfig.json
apps/cli/assets/: banner.txt
apps/cli/src/: Dockerfile  execute_lilypad.sh  index.ts
apps/cli/src/commands/: Cli.ts  contract-operations.ts  jobs.ts  lilypad-utils.ts  result-visualization.ts  wallet.ts
apps/cli/src/test/: lillypad-utils.test.ts
apps/cli/src/utils/: auth-web3.ts  connect-web3.ts  sensitizeInput.ts
apps/contracts/: README.md  hardhat.config.ts  nx.json  package-lock.json  package.json
apps/contracts/contracts/: Onchain-attestation.sol
apps/contracts/contracts/bacalhau_lillypad/: Modicrum_contract_adapter.sol
apps/contracts/contracts/worldcoin/: AuthModule.sol
apps/contracts/scripts/: deployAll.ts  deployModicrum.ts  dfns.ts
apps/contracts/tests/: ModicrumAdapter.test.ts  utils.ts
apps/georender/: .gitignore  Dockerfile-pdal  Dockerfile.bacalhau  Dockerfile.georender  Dockerfile.migrateFiles  README.md  docker-compose.yml  package.json  project.json  pyproject.toml  requirements.txt  run_bacalhau.sh  run_migration.sh  run_module.sh  setup.py
apps/georender/georender/: __init__.py  georender.py  requirements.txt
apps/georender/src/: __init__.py  georender.py
apps/georender/tests/: __init__.py  test_georender.py  test_hello.py
apps/georender/utils/: migrateFiles.py
apps/migration/: migrateFiles_copc.py  pyproject.toml  web3Storage.py
apps/surface-reconstruction/src/: compute_normal.cpp  normal_and_reconstruction.cpp  reconstruction_structured.cpp
apps/tile-rendering/: README.md  app.py  docker-compose.yml  dockerfile.tilerendering  pyproject.toml
apps/tile-rendering/component/: setup.py
apps/tile-rendering/component/TilerendererJS/: __init__.py
apps/tile-rendering/component/TilerendererJS/frontend/: MANIFEST.in  package.json  tsconfig.json
apps/tile-rendering/component/TilerendererJS/frontend/public/: index.html
apps/tile-rendering/component/TilerendererJS/frontend/src/: ThreeTilerendering.tsx  index.tsx  package.json
apps/tile-rendering/component/threeDTilerendererJS/: MANIFEST.in  __init__.py  tsconfig.json
apps/tile-rendering/component/threeDTilerendererJS/3dtilerendererJS/: RenderingComponent.ts  index.tsx  tilerendering.ts
libs/dfns/: README.md  package.json  project.json  tsconfig.spec.json
(+9 files in other folders)
