[tool.coverage.run]
branch = true
source = [ "src" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.poetry]
name = "georender"
version = "0.0.1"
description = "package to run geospatial rendering jobs."
authors = ["Dhruv Malik", "Laurent C.", "Jean" ]
license = 'MIT'
readme = 'README.md'

  [[tool.poetry.packages]]
  include = "src/"

  [tool.poetry.dependencies]
  python = ">3.9.7"
  py3dtiles = "*"
  geopandas = "==0.13.2"
  shapely = "==2.0.1"
  pyproj = "*"
  gdal = "^3.7.1.1"
  requests = "^2.31.0"
  python-dotenv = "^1.0.0"
  
  [tool.poetry.group.dev.dependencies]
  autopep8 = "2.0.2"
  flake8 = "6.0.0"
  pytest = "7.3.1"
  pytest-sugar = "0.9.7"
  pytest-cov = "4.1.0"
  pytest-html = "3.2.0"
  

  [tool.setuptools]
  packages=["georender"]
  package-dir = {"" = "src"}

  [tool.poetry.scripts]
  test = 'scripts:test'
  

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[virtualenvs]
in-project = true