[tool.poetry]
name = "migration"
version = "0.1.0"
description = "does the data transfer sequentially from given open data sources to decentralised storage for bacalhau processing"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
